refactor : dto 펙토리 메소드화, 공통 메소드 추출