@@ -3,6 +3,7 @@ package com.bizsync.backend.controller;
 import com.bizsync.backend.domain.entity.User;
 import com.bizsync.backend.domain.repository.UserRepository;
 import com.bizsync.backend.dto.response.ApiResponse;
+import com.bizsync.backend.dto.response.UserSummaryDTO;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -10,11 +11,15 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
+/**
+ * 사용자 관련 REST API 컨트롤러
+ * 
+ * <p>사용자 목록 조회 및 검색 API를 제공합니다.
+ * 
+ * @author BizSync Team
+ */
 @RestController
 @RequestMapping("/api/users")
 @RequiredArgsConstructor
@@ -22,41 +27,33 @@ public class UserController {
 
     private final UserRepository userRepository;
 
+    /**
+     * 전체 사용자 목록을 조회합니다.
+     * 
+     * @return 사용자 목록
+     */
     @GetMapping
-    public ResponseEntity<ApiResponse<List<Map<String, Object>>>> getAllUsers() {
+    public ResponseEntity<ApiResponse<List<UserSummaryDTO>>> getAllUsers() {
         List<User> users = userRepository.findAll();
-
-        List<Map<String, Object>> userList = users.stream()
-                .map(user -> {
-                    Map<String, Object> userMap = new HashMap<>();
-                    userMap.put("userId", user.getUserId());
-                    userMap.put("name", user.getName());
-                    userMap.put("email", user.getEmail());
-                    userMap.put("department", user.getDepartment() != null ? user.getDepartment() : "");
-                    userMap.put("role", user.getRole().name());
-                    userMap.put("position", user.getPosition() != null ? user.getPosition().getKorean() : "");
-                    return userMap;
-                })
-                .collect(Collectors.toList());
+        List<UserSummaryDTO> userList = users.stream()
+                .map(UserSummaryDTO::from)
+                .toList();
 
         return ResponseEntity.ok(ApiResponse.success(userList));
     }
 
+    /**
+     * 키워드로 사용자를 검색합니다.
+     * 
+     * @param keyword 검색 키워드 (이름 또는 이메일)
+     * @return 검색된 사용자 목록
+     */
     @GetMapping("/search")
-    public ResponseEntity<ApiResponse<List<Map<String, Object>>>> searchUsers(@RequestParam String keyword) {
+    public ResponseEntity<ApiResponse<List<UserSummaryDTO>>> searchUsers(@RequestParam String keyword) {
         List<User> users = userRepository.findByNameContainingOrEmailContaining(keyword, keyword);
-
-        List<Map<String, Object>> userList = users.stream()
-                .map(user -> {
-                    Map<String, Object> userMap = new HashMap<>();
-                    userMap.put("userId", user.getUserId());
-                    userMap.put("name", user.getName());
-                    userMap.put("email", user.getEmail());
-                    userMap.put("department", user.getDepartment() != null ? user.getDepartment() : "");
-                    userMap.put("position", user.getPosition() != null ? user.getPosition().getKorean() : "");
-                    return userMap;
-                })
-                .collect(Collectors.toList());
+        List<UserSummaryDTO> userList = users.stream()
+                .map(UserSummaryDTO::from)
+                .toList();
 
         return ResponseEntity.ok(ApiResponse.success(userList));
     }
